# pos-food

./: .gitignore  README.md  package.json  tsconfig.json
backend/: .env.example  .gitignore  Dockerfile  data.db  pyproject.toml  verify_imports.py  verify_manifests.py
backend/alembic/: env.py
backend/alembic/versions/: 2d3b55d5d5e2_fix_plugin_runtime_schema.py  a564f55fdea8_split_plugins_i18n.py
backend/app/: main.py
backend/app/api/: auth.py  plugins_runtime.py  router.py  setup.py  setup_ui.py  system.py  ui.py
backend/app/core/: events.py
backend/app/core/config/: settings.py
backend/app/core/db/: base.py  session.py
backend/app/core/plugins/: __init__.py  bootstrap.py  dependencies.py  guards.py  lifecycle.py  loader.py  manifest.py  models.py  registry.py  runtime.py
backend/app/core/security/: auth.py  models.py  permissions.py  utils.py
backend/app/core/tenancy/: context.py  middleware.py  models.py  plugins_router.py
backend/app/core/utils/: i18n_normalize.py
backend/app/plugins/app_settings/: manifest.py  models.py  router.py  schemas.py  seed.py  service.py
backend/app/plugins/business_profile/: manifest.py  models.py  seed.py  service.py
backend/app/plugins/catalog_product/: manifest.py  models.py  router.py  schemas.py  seed.py  service.py
backend/app/plugins/catalog_product_i18n/: manifest.py  models.py  schemas.py  seed.py
backend/app/plugins/config/: __init__.py  manifest.py  models.py  (+3 more)
backend/tests/: conftest.py  test_core_features.py  test_plugin_registry.py  test_plugins_lifecycle.py  test_setup_bootstrap_utils.py
(+231 files in other folders)
