[project]
name = "restaurant-pos-backend"
version = "0.1.0"
description = "Restaurant POS backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "pydantic-settings>=2.3",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "requests>=2.32",
  "bcrypt>=4.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
